Create capoTableColumn and implement getMinFret method, and test method

--- a/src/main/resources/fxml/ChordManager.fxml
+++ b/src/main/resources/fxml/ChordManager.fxml
@@ -96,13 +96,14 @@
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
             </padding>
         </Pane>
-        <Pane layoutX="620.0" layoutY="1.0" prefHeight="490.0" prefWidth="340.0">
+        <Pane layoutX="620.0" layoutY="1.0" prefHeight="490.0" prefWidth="420.0">
             <children>
-                <TableView fx:id="chordlistTableView" layoutX="20.0" layoutY="20.0" prefHeight="450.0" prefWidth="300.0">
+                <TableView fx:id="chordlistTableView" layoutX="20.0" layoutY="20.0" prefHeight="450.0" prefWidth="380.0">
                     <columns>
-                        <TableColumn fx:id="idTableColumn" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" />
-                        <TableColumn fx:id="chordTableColumn" prefWidth="115.0" text="Akkord" />
-                        <TableColumn fx:id="fingeringTableColumn" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Lefogás" />
+                        <TableColumn fx:id="idTableColumn" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" style="-fx-alignment: CENTER;" />
+                        <TableColumn fx:id="chordTableColumn" prefWidth="100.0" style="-fx-alignment: CENTER;" text="Akkord" />
+                        <TableColumn fx:id="fingeringTableColumn" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" style="-fx-alignment: CENTER;" text="Lefogás" />
+                        <TableColumn fx:id="capoTableColumn" maxWidth="80.0" minWidth="80.0" style="-fx-alignment: CENTER;" text="CapoMax" />
                     </columns>
                 </TableView>
             </children>
